12070 sata SSDs attached to sata ports can't trim Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Bill Sommerfeld <sommerfeld@hamachi.org> Approved by: Robert Mustacchi <rm@fingolfin.org>